--- a/instagram/templates/general/contact.html
+++ b/instagram/templates/general/contact.html
@@ -4,6 +4,8 @@
 {% block page_title %}
     <div class="container">
     <h1>Contacto</h1>
+    {% include '_includes/_messages.html' %}
+
     </div>
 {% endblock %}
 
