--- a/instagram/templates/general/home.html
+++ b/instagram/templates/general/home.html
@@ -4,11 +4,10 @@
 {% block page_title %}
     <div class="container">
     <h1>Bienvenido a nuestra pagina</h1>
+    {% include '_includes/_messages.html' %}
     </div>
 {% endblock %}
-
 {% block page_content %}
 <div class="container">
-<p>Este es el contenido de nuestra home</p>
 </div>
 {% endblock %}
