--- a/instagram/templates/_includes/posts/_posts.html
+++ b/instagram/templates/_includes/posts/_posts.html
@@ -2,8 +2,8 @@
     <div class="bg-white border mt-2">
     <div>
         <div class="d-flex flex-row justify-content-between align-items-center p-2 border-bottom">
-            <div class="d-flex flex-row align-items-center feed-text px-2"><img class="rounded-circle" src="{{ post.user.profile.profile_picture.url }}" width="45">
-                <div class="d-flex flex-column flex-wrap ml-2"><span class="font-weight-bold">{{ post.user.first_name }}</span><span class="text-black-50 time">{{ post.created_at }}</span></div>
+            <div class="d-flex flex-row align-items-center feed-text px-2"><img class="rounded-circle" src="{{ post.user.profile.profile_picture.url }}" width="45" height="45">
+                <div class="d-flex flex-column flex-wrap ml-2"><span class="font-weight-bold">{{ post.user }}</span><span class="text-black-50 time">{{ post.created_at }}</span></div>
             </div>
             <div class="feed-icon px-2"><i class="fa fa-ellipsis-v text-black-50"></i></div>
         </div>
