--- a/instagram/templates/general/profile_detail.html
+++ b/instagram/templates/general/profile_detail.html
@@ -3,9 +3,8 @@
 {% block head_title %}InstaConquer{% endblock %}
 {% block page_title %}
     <div class="container">
-    <h1>Perfil de {{ request.user.username }}</h1>
-    {% include '_includes/_messages.html' %}
-
+        <h1>Perfil de {{ request.user.username }}</h1>
+        {% include '_includes/_messages.html' %}
     </div>
 {% endblock %}
 
@@ -21,13 +20,18 @@
         {% endif %}
     </p>
     <p>Seguidores: {{ profile.followers.count }}</p>
+    {% if profile.user == request.user %}
     <p><a href="{% url 'profile_update' profile.pk %}">Editar</a></p>
+    {% endif %}
     <section>
         <h2>Publicaciones</h2>
-        {% for post in profile.user.posts.all %}
-            {% include '_includes/posts/_posts.html' %}
-            <hr class="hr" />
-        {% endfor %}
+        <div class="row">
+            {% for post in profile.user.posts.all %}
+                <div class="col-12 col-sm-6 col-md-4">
+                    {% include '_includes/posts/_posts.html' %}
+                </div>
+            {% endfor %}
+        </div>
     </section>
 </div>
 {% endblock %}
