--- a/instagram/templates/_includes/posts/_posts.html
+++ b/instagram/templates/_includes/posts/_posts.html
@@ -1,16 +1,52 @@
 <article>
     <div class="bg-white border mt-2">
-    <div>
-        <div class="d-flex flex-row justify-content-between align-items-center p-2 border-bottom">
-            <div class="d-flex flex-row align-items-center feed-text px-2"><img class="rounded-circle" src="{{ post.user.profile.profile_picture.url }}" width="45" height="45">
-                <div class="d-flex flex-column flex-wrap ml-2"><span class="font-weight-bold">{{ post.user }}</span><span class="text-black-50 time">{{ post.created_at }}</span></div>
+        <div>
+            <!-- Encabezado de la publicación con imagen y nombre del usuario -->
+            <div class="d-flex flex-row justify-content-between align-items-center p-2 border-bottom">
+                <div class="d-flex flex-row align-items-center feed-text px-2">
+                    <img class="rounded-circle" src="{{ post.user.profile.profile_picture.url }}" width="45" height="45">
+                    <div class="d-flex flex-column flex-wrap ml-2">
+                        <span class="font-weight-bold">{{ post.user }}</span>
+                        <span class="text-black-50 time">{{ post.created_at }}</span>
+                    </div>
+                </div>
+                <div class="feed-icon px-2">
+                    <i class="fa fa-ellipsis-v text-black-50"></i>
+                </div>
             </div>
-            <div class="feed-icon px-2"><i class="fa fa-ellipsis-v text-black-50"></i></div>
         </div>
+
+        <!-- Imagen de la publicación -->
+        <div class="feed-image p-2 px-3">
+            <img width="300px" class="img-fluid img-responsive" src="{{ post.image.url }}">
+        </div>
+
+        <!-- Íconos de acción -->
+        <div class="d-flex justify-content-end socials p-2 py-3">
+            <i class="fa fa-thumbs-up"></i>
+            <i class="fa fa-comments-o"></i>
+            <i class="fa fa-share"></i>
+        </div>
+
+        <!-- Pie de la publicación con botón de me gusta y contador -->
+        <footer>
+            <div class="text-center">
+                <p>
+                    <span class="nLikes">{{ post.likes.all.count }}</span>
+                    <a class="likeButton" href="{% url 'post_like_ajax' post.pk %}">
+                        {% if request.user in post.likes.all %}
+                            <i class="bi bi-heart-fill"></i>
+                        {% else %}
+                            <i class="bi bi-heart"></i>
+                        {% endif %}
+                    </a>
+                </p>
+            </div>
+
+            <!-- Botón para ver el post completo -->
+            <p class="text-center mt-2 mb-2">
+                <a class="btn btn-primary btn-sm" role="button" href="{% url 'post_detail' post.pk %}">Ver Post</a>
+            </p>
+        </footer>
     </div>
-    <div class="p-2 px-3"><span>{{ post.caption }}</span></div>                    
-    <div class="feed-image p-2 px-3">
-        <img width="300px" class="img-fluid img-responsive" src="{{ post.image.url }}">
-    </div>
-    <div class="d-flex justify-content-end socials p-2 py-3"><i class="fa fa-thumbs-up"></i><i class="fa fa-comments-o"></i><i class="fa fa-share"></i></div>
 </article>
