--- a/instagram/templates/general/layout.html
+++ b/instagram/templates/general/layout.html
@@ -6,6 +6,8 @@
     <title>{% block head_title %}titulo base{% endblock %}</title>
     <!--Añadimos el CSS de BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--Añadimos los iconos de BOOTSTRAP-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css">
 
 </head>
 <body>
@@ -21,5 +23,43 @@
 
 <!--Añadimos una libreria de javascript para algunos efectos-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5NQy4URFn7QCL5AYjTfwJzzU2kiy1Mz3hNP5WJHz" crossorigin="anonymous"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            // Seleccionamos todos los botones con clase 'likeButton'
+            const likeButtons = document.querySelectorAll('.likeButton');
+    
+            likeButtons.forEach((likeButton) => {
+                likeButton.addEventListener('click', (event) => {
+                    event.preventDefault();  // Prevenir la redirección
+                    
+                    // Obtener el span correspondiente a los "me gusta" del post actual
+                    const nLikesSpan = likeButton.closest('article').querySelector('.nLikes');
+                    let nLikes = parseInt(nLikesSpan.innerHTML);
+    
+                    // Hacemos una petición GET al href del botón
+                    fetch(likeButton.href)
+                        .then(response => {
+                            if (!response.ok) {
+                                throw new Error('Error en la petición');
+                            }
+                            return response.json();
+                        })
+                        .then(data => {
+                            // Cambiar el icono y el contador de "me gusta"
+                            if (data.liked) {
+                                likeButton.innerHTML = '<i class="bi bi-suit-heart-fill"></i>';
+                                nLikes += 1;
+                            } else {
+                                likeButton.innerHTML = '<i class="bi bi-suit-heart"></i>';
+                                nLikes -= 1;
+                            }
+                            nLikesSpan.innerHTML = nLikes;
+                        })
+                        .catch(error => console.error('Error:', error));
+                });
+            });
+        });
+    </script>
+    
 </body>
 </html>
