--- a/instagram/templates/general/layout.html
+++ b/instagram/templates/general/layout.html
@@ -22,7 +22,7 @@
     {% include '_includes/_footer.html' %}
 
 <!--Añadimos una libreria de javascript para algunos efectos-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5NQy4URFn7QCL5AYjTfwJzzU2kiy1Mz3hNP5WJHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             // Seleccionamos todos los botones con clase 'likeButton'
